--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.1.2",
